--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -48,7 +48,7 @@ $topnav-bg:   #fff;
 // Right Sidebar
 $rightbar-width:  280px;
 
-// Brand 
+// Brand
 $navbar-brand-box-width: 250px;
 
 // Boxed layout width
@@ -346,7 +346,7 @@ $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberati
 $font-family-base:            $font-family-sans-serif;
 // stylelint-enable value-keyword-case
 
-$font-size-base:              0.875rem;
+$font-size-base:              0.8125rem;
 $font-size-lg:                $font-size-base * 1.25;
 $font-size-sm:                $font-size-base * .875;
 
@@ -582,7 +582,7 @@ $form-grid-gutter-width:                10px;
 $form-group-margin-bottom:              1rem;
 
 $input-group-addon-color:               $input-color;
-$input-group-addon-bg:                  $gray-200;
+$input-group-addon-bg:                  $input-bg;//$gray-200;
 $input-group-addon-border-color:        $input-border-color;
 
 $custom-forms-transition:               background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
