--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1183,7 +1183,7 @@ $pre-color:                         $gray-900;
 $pre-scrollable-max-height:         340px;
 
 
-// Utilities
+// Utilitiesn
 
 $displays: none, inline, inline-block, block, table, table-row, table-cell, flex, inline-flex;
 $overflows: auto, hidden;
