--- a/resources/scss/app-dark.scss
+++ b/resources/scss/app-dark.scss
@@ -65,3 +65,5 @@ File: Main dark Css File
 @import "custom/pages/coming-soon";
 @import "custom/pages/timeline";
 @import "custom/pages/extras-pages";
+@import "custom/pages/user";
+
