--- a/resources/scss/_variables-dark.scss
+++ b/resources/scss/_variables-dark.scss
@@ -942,7 +942,7 @@ $form-feedback-tooltip-border-radius: $tooltip-border-radius;
 // Popovers
 
 $popover-font-size:                 $font-size-sm;
-$popover-bg:                        $white;
+$popover-bg:                        $gray-200;//$white;
 $popover-max-width:                 276px;
 $popover-border-width:              $border-width;
 $popover-border-color:              $gray-200;
