--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -66,3 +66,4 @@ File: Main Css File
 @import "custom/pages/coming-soon";
 @import "custom/pages/timeline";
 @import "custom/pages/extras-pages";
+@import "custom/pages/user";
